tests/paczka1/fuzzy1/46035060.err
Error in line 1: S518 A398 55,7
Error in line 2: S518 S518 58,8
Error in line 4: b9Dg A579 2,1
Error in line 6: b9Dg A398 91,4
Error in line 16: vkTz3RA2nws S834 4,1
Error in line 24: Ftvq AD98 0,9
Error in line 26: Ftvq A398 2,1
Error in line 27: Ftvq S834 40,8
Error in line 38: Rto A398 51,5
